chore: finish api docs
